# RAGChatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
.github/workflows/: ci.yml  ingestion-daily.yml
DOCS/: ProblemStatement.md  architecture.md  deployment-plan.md  deployment-vercel-railway.md  edgecase.md  implementationplan.md
app/: __init__.py  classifier.py  embeddings.py  formatter.py  generator.py  main.py  models.py  rag.py  rate_limit.py  refusal.py  retriever.py  security.py  settings.py  stub_generator.py  validator.py
config/: __init__.py  chunk_ids.py  corpus.yaml  loader.py
data/: README.md
frontend/: .env.local.example  README.md  next.config.ts  vercel.json
images/: DESIGN (1).md
ingestion/: __init__.py  chunk.py  clean.py  fetch.py  html_extract.py  index.py  models.py  parse.py  paths.py  run.py  text_utils.py
scheduler/: README.md  __init__.py  daily.py  models.py
scripts/: clean_all_schemes.py
tests/: MANUAL_QA.md  PHASE8_SIGNOFF.md  test_api.py  test_api_chat.py  test_chunk.py  test_classifier.py  test_clean_all_schemes.py  test_corpus_config.py  test_fetch.py  test_formatter.py  test_fund_management.py  test_generator.py  test_health.py  test_index.py  test_ingestion_run.py  test_models.py  test_parse.py  test_phase9_acceptance.py  test_phase9_scheduler.py  test_rag.py  test_rag_phase6.py  test_refusal.py  test_retrieval.py  test_scheduler.py  test_security.py  test_ui_contract.py  test_validator.py
ui/: app.js  index.html  styles.css
(+25 files in other folders)
